<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/action_search" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="never"
        android:title="@string/action_help" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="never"
        android:title="@string/action_about" />

</menu>
