<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="32dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/main_flashlight"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/ic_action_flash_on"
                android:drawablePadding="-16dp"
                android:onClick="onFlashlight"
                android:text="@string/main_flashlight" />

            <Button
                android:id="@+id/main_compass"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/ic_action_location_found"
                android:drawablePadding="-16dp"
                android:onClick="onCompass"
                android:text="@string/main_compass" />

            <Button
                android:id="@+id/main_display_metrics"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/ic_action_phone"
                android:drawablePadding="-16dp"
                android:onClick="onDisplayMetrics"
                android:text="@string/main_display_metrics" />

            <Button
                android:id="@+id/main_base_converter"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/ic_action_import_export"
                android:drawablePadding="-16dp"
                android:onClick="onBaseConverter"
                android:text="@string/main_base_converter" />

            <Button
                android:id="@+id/main_calculator"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:drawableLeft="@drawable/ic_action_dial_pad"
                android:drawablePadding="-16dp"
                android:onClick="onCalculator"
                android:text="@string/main_calculator" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
